Ajoute les topsep dans les itemize de 1er niveau

--- a/latex/ressources/R104.tex
+++ b/latex/ressources/R104.tex
@@ -49,7 +49,7 @@ instruments de mesure et d'interpréter les résultats.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Lois de base de l'électricité, théorèmes fondamentaux, pont diviseur
 \item
