--- a/latex/ressources/R105.tex
+++ b/latex/ressources/R105.tex
@@ -43,7 +43,7 @@ transmission.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Types de support de transmission (réseau d'entreprise, réseau
   opérateur)
