--- a/latex/ressources/R106.tex
+++ b/latex/ressources/R106.tex
@@ -46,7 +46,7 @@ permettra aux étudiants de relier ces systèmes au monde extérieur.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Codage des nombres, des caractères, des images.
 \item
