--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -51,7 +51,7 @@ logiciels~: compétence \og Administrer les réseaux et l'Internet\fg{}
 \ajoutRcontenudetaille{
 En utilisant un langage de programmation, comme par exemple Python, les
 contenus suivants seront traités~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Notions d'algorithmique~:
   \begin{itemize}
