--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -56,7 +56,7 @@ précédemment.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Systèmes d'exploitations Windows/Linux, Interface-Homme-Machine et
   ligne de commande
