--- a/latex/ressources/R109.tex
+++ b/latex/ressources/R109.tex
@@ -48,7 +48,7 @@ navigateur Web.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Utilisation avancée d'un navigateur Web
 \item
