--- a/latex/ressources/R110.tex
+++ b/latex/ressources/R110.tex
@@ -47,7 +47,7 @@ de compréhension dans un contexte professionnel technique.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Développer sa confiance en soi
 \item
