--- a/latex/ressources/R111.tex
+++ b/latex/ressources/R111.tex
@@ -49,7 +49,7 @@ l'importance des savoir-être et aux enjeux du développement durable.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Rechercher, sélectionner ses sources et questionner leur fiabilité
 \item
