--- a/latex/ressources/R112.tex
+++ b/latex/ressources/R112.tex
@@ -33,7 +33,7 @@
 % Le descriptif
 \ajoutRancrage{Le Projet Personnel et Professionnel (\textabbrv{PPP}) des semestres 1 et 2 de la
 première année de B.U.T. permet à l'étudiant~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   s'approprier son champ d'activité\,;
 \item
@@ -62,7 +62,7 @@ première année de B.U.T. permet à l'étudiant~:
 % Contenus
 \ajoutRcontenudetaille{
 Les activités pouvant être proposées dans cette ressource sont~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Rencontres d'entrepreneurs, de chefs de service, de techniciens et
   d'enseignants\,;
