--- a/latex/ressources/R113.tex
+++ b/latex/ressources/R113.tex
@@ -45,7 +45,7 @@ télécommunications.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Introduction aux signaux~:
   \begin{itemize}
@@ -69,7 +69,7 @@ télécommunications.}
 \end{itemize}
 Cette partie sera l'occasion de réviser les règles de calculs de base
 par l'intermédiaire du calcul d'images et d'antécédents.
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Éléments de trigonométrie~:
   \begin{itemize}
@@ -83,7 +83,7 @@ par l'intermédiaire du calcul d'images et d'antécédents.
   \end{itemize}
 \end{itemize}
 et les mêmes avec sinus\,;
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   angles remarquables.
 \item
