--- a/latex/ressources/R114.tex
+++ b/latex/ressources/R114.tex
@@ -46,7 +46,7 @@ lien avec l'électronique et les télécommunications.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Trigonométrie~:
   \begin{itemize}
