--- a/latex/ressources/R115.tex
+++ b/latex/ressources/R115.tex
@@ -41,7 +41,7 @@ l'amenant à travailler en équipe.}
 % Contenus
 \ajoutRcontenudetaille{
 Dans le cadre de cette ressource transversale, l'étudiant devra~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Partager de façon collective l'information~:
   \begin{itemize}
