--- a/latex/ressources/R201.tex
+++ b/latex/ressources/R201.tex
@@ -54,7 +54,7 @@ pourront servir de support).}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Protocole et adressage \textabbrv{IP}v4\&6.
 \item
