--- a/latex/ressources/R204.tex
+++ b/latex/ressources/R204.tex
@@ -47,7 +47,7 @@ téléphonique mixte (\textabbrv{TDM}/\textabbrv{IP}) ou \textabbrv{ToIP}.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Présentation des principes généraux de la téléphonie.
 \item
