--- a/latex/ressources/R206.tex
+++ b/latex/ressources/R206.tex
@@ -47,7 +47,7 @@ en téléphonie, ou en télécommunications numériques.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Comprendre la notion de signal numérique, et le principe de la
   numérisation et de la restitution de
