--- a/latex/ressources/R207.tex
+++ b/latex/ressources/R207.tex
@@ -57,7 +57,7 @@ spécifiques qui seront introduits.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Stockage et accès aux données~:
   \begin{itemize}
