--- a/latex/ressources/R208.tex
+++ b/latex/ressources/R208.tex
@@ -50,7 +50,7 @@ précédemment.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Structure d'un programme~: arborescence de fichiers, modules et
   packages.
