--- a/latex/ressources/R209.tex
+++ b/latex/ressources/R209.tex
@@ -56,7 +56,7 @@ contribue aux apprentissages critiques mentionnés précédemment.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Introduction au protocole \textabbrv{HTTP}.
 \item
