--- a/latex/ressources/R211.tex
+++ b/latex/ressources/R211.tex
@@ -43,7 +43,7 @@ télécommunications.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Utiliser les outils et ressources documentaires de manière
   professionnelle.
