--- a/latex/ressources/R212.tex
+++ b/latex/ressources/R212.tex
@@ -32,7 +32,7 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource permettra à l'étudiant de~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   d'avoir une compréhension exhaustive du référentiel de compétences de
   la formation et des éléments
@@ -68,7 +68,7 @@
 % Contenus
 \ajoutRcontenudetaille{
 Les activités notamment proposées dans cette ressource sont~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Enquête métiers et veille professionnelle\,;
 \item
