--- a/latex/ressources/R213.tex
+++ b/latex/ressources/R213.tex
@@ -43,7 +43,7 @@ l'exploitation d'algorithmes mis en œuvre via un outil informatique.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Suites, récurrence, signal numérique
   \begin{itemize}
