--- a/latex/saes/SAE11_exemple1.tex
+++ b/latex/saes/SAE11_exemple1.tex
@@ -10,7 +10,7 @@ environnement numérique.}
 
 \ajoutESdescription{
 On pourra faire un focus particulier sur les points suivants.
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Protéger ses accès avec des mots de passe solides\,; en TP on peut
   mettre en place l'usage d'un gestionnaire
@@ -52,7 +52,7 @@ On pourra faire un focus particulier sur les points suivants.
   \url{https://www.dcode.fr/fr}).
 \end{itemize}
 On pourra également utiliser les supports~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Cybermalveillance~: \url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
 \item
