--- a/latex/saes/SAE11_exemple2.tex
+++ b/latex/saes/SAE11_exemple2.tex
@@ -10,7 +10,7 @@ les actions pour y remédier.}
 
 \ajoutESdescription{
 On pourra faire un focus particulier sur les points suivants~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   L'arnaque au faux support technique\,;
 \item
@@ -41,7 +41,7 @@ On pourra faire un focus particulier sur les points suivants~:
   Le spam téléphonique.
 \end{itemize}
 On pourra également utiliser les supports~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Cybermalveillance
  ~: \url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
