--- a/latex/saes/SAE11_exemple3.tex
+++ b/latex/saes/SAE11_exemple3.tex
@@ -20,7 +20,7 @@ gravité d'atteinte à la disponibilité, à l'intégrité et/ou à la
 confidentialité des biens impactés.\\
 L'étudiant, dès la fin du S1, prendra ainsi conscience de la nécessité
 d'une bonne hygiène informatique, en découvrant~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   l'intérêt des bons mots de passe (nombre de caractères, complexité de
   l'alphabet)\,;
@@ -45,7 +45,7 @@ d'une bonne hygiène informatique, en découvrant~:
 \end{itemize}
 Cette liste n'est évidemment pas limitative.\\
 On pourra également utiliser les supports~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Cybermalveillance~:
   \url{https://www.cybermalveillance.gouv.fr/bonnes-pratiques}
