--- a/latex/saes/SAE12.tex
+++ b/latex/saes/SAE12.tex
@@ -52,7 +52,7 @@ stable.}
 % Livrable
 \ajoutSlivrables{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Schéma réseau annoté avec le plan d'adressage et les services\,;
 \item
