--- a/latex/saes/SAE12_exemple2.tex
+++ b/latex/saes/SAE12_exemple2.tex
@@ -12,7 +12,7 @@ installation des postes clients (Windows, Linux) pour les utilisateurs.}
 
 \ajoutESdescription{
 Il s'agit de~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   répondre au cahier des charges\,;
 \item
