--- a/latex/saes/SAE12_exemple3.tex
+++ b/latex/saes/SAE12_exemple3.tex
@@ -26,7 +26,7 @@ capturant le trafic sur lien inter-\textabbrv{VLAN}. Il est également possible
 d'analyser les flux sur grâce aux outils de capture des trames (Tcpdump,
 Wireshark).\\
 En synthèse, l'étudiant sera confronté à~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Analyse des besoins et chiffrage des achats nécessaires\,;
 \item
@@ -46,7 +46,7 @@ En synthèse, l'étudiant sera confronté à~:
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Livrable documentaire en tant qu'évaluation intermédiaire~:
   \begin{itemize}
