--- a/latex/saes/SAE12_exemple4.tex
+++ b/latex/saes/SAE12_exemple4.tex
@@ -16,7 +16,7 @@ valeur de la luminosité ambiante.}
 La SAÉ va servir de base pour de futures SAE plus poussées en IoT ou en
 réseaux.\\
 Les étapes à réaliser seraient les suivantes~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Connecter un Raspberry PI avec un clavier, un écran et récupérer son
   adresse \textabbrv{MAC}.
@@ -43,7 +43,7 @@ Les étapes à réaliser seraient les suivantes~:
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Compte-rendu
 \item
