--- a/latex/saes/SAE13_exemple1.tex
+++ b/latex/saes/SAE13_exemple1.tex
@@ -5,7 +5,7 @@
 \nouvelexemple{Caractériser des supports de transmission}
 
 \ajoutESproblematique{L'entreprise demande à l'étudiant de~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   savoir lire un document technique de mesures\,;
 \item
@@ -32,7 +32,7 @@ les concepts fondamentaux des systèmes électroniques, le vocabulaire en
 architecture des réseaux numériques, des concepts mathématiques pour les
 signaux de base, pour les calculs de puissance, d'atténuation.\\
 Le support pourra être~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   le cuivre, avec pour mesures envisagées~: des mesures temporelles
   (échelon, sinus), le retard de propagation,
@@ -47,7 +47,7 @@ Le support pourra être~:
   d'interférence.
 \end{itemize}
 L'étudiant devra~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   lire des documents techniques de support de transmission\,;
 \item
@@ -62,7 +62,7 @@ L'étudiant devra~:
   analyser et exploiter des résultats de tests.
 \end{itemize}
 Exemples de mise en oeuvre~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Mesure temporelle (échelon, sinus), retard de propagation,
   atténuation, échos (réflexion), perturbations,
@@ -90,7 +90,7 @@ pour la rédaction du compte rendu.}
 \ajoutESmodalite{L'étudiant doit être capable de rédiger un compte-rendu de mesure avec
 explications.\\
 On pourra s'appuyer sur~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   dossier ou rapport d'étude (compte-rendu)\,;
 \item
