--- a/latex/saes/SAE14.tex
+++ b/latex/saes/SAE14.tex
@@ -52,7 +52,7 @@ en mesurant l'importance et la portée des contenus qu'il diffuse
 % Livrable
 \ajoutSlivrables{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Dossier ou rapport d'étude
 \item
