--- a/latex/saes/SAE15.tex
+++ b/latex/saes/SAE15.tex
@@ -57,7 +57,7 @@ pour gérer de façon efficace le traitement de ces données.}
 % Livrable
 \ajoutSlivrables{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Codes informatiques développés\,;
 \item
