--- a/latex/saes/SAE15_exemple1.tex
+++ b/latex/saes/SAE15_exemple1.tex
@@ -9,7 +9,7 @@ développement informatique. Le projet traite d'une activité fréquemment
 demandée au professionnel R\&T~: mettre à disposition de ses
 collaborateurs une information extraite de différentes sources de
 données, par exemple~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   le recensement des équipements informatiques, des services, des
   personnels\,;
@@ -39,7 +39,7 @@ Il sera demandé à l'étudiant (individuellement ou en petit groupe) de
 traiter des données simples (ne nécessitant pas une structuration
 complexe dans le code informatique ni une base de données), avec
 différentes étapes~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Préparer l'environnement de travail pour accès distance aux ressources
  ~:
@@ -111,7 +111,7 @@ différentes étapes~:
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Codes informatiques développés~: l'étudiant devra fournir l'ensemble
   de scripts et de codes informatiques,
