--- a/latex/saes/SAE16.tex
+++ b/latex/saes/SAE16.tex
@@ -53,7 +53,7 @@ portfolio mis en place par l'établissement~: carnet papier, document
 bureautique ou logiciel dédié.\\
 Le portfolio est un élément structurant des formations en Approche Par
 Compétence (\textabbrv{APC}). En effet, le portfolio~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   soutient l'apprentissage par la constitution d'un dossier de traces
   (échantillon de preuves, sélectionnées
