--- a/latex/saes/SAE21.tex
+++ b/latex/saes/SAE21.tex
@@ -51,7 +51,7 @@ fournir à la structure un réseau fonctionnel et structuré.}
 % Livrable
 \ajoutSlivrables{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Maquette du projet
 \item
