--- a/latex/saes/SAE21_exemple1.tex
+++ b/latex/saes/SAE21_exemple1.tex
@@ -5,7 +5,7 @@
 \nouvelexemple{Construction de réseau routé (statique/dynamique), routage inter-\textabbrv{VLAN}~:  approche matérielle ou virtuelle}
 
 \ajoutESproblematique{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Comprendre et construire une architecture de réseaux d'entreprise et
   d'Internet.
@@ -37,7 +37,7 @@ simple composée de 6 \textabbrv{VLAN} et 3 routeurs.\\
 Extensions possibles~: effectuer du \textabbrv{VRF}, ajouter des tunnels, introduire
 un \textabbrv{NAT}, effectuer du filtrage sur un \textabbrv{VLAN} spécifique.\\
 Préconisations~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Fourniture d'un cahier des charges pour 2 étudiants
 \item
@@ -52,7 +52,7 @@ Préconisations~:
 
 
 \ajoutESmodalite{Tout ou partie des éléments suivants~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Projet réseau fonctionnel\,;
 \item
