--- a/latex/saes/SAE21_exemple2.tex
+++ b/latex/saes/SAE21_exemple2.tex
@@ -8,7 +8,7 @@
 numérique, il est contacté par une entreprise qui lui passe une commande
 : déployer un réseau d'entreprise dans le nouveau siège de la société.\\
 Sa mission consiste à~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Proposer et mettre en place une infrastructure de réseau d'entreprise
   dotée de services réseaux et
@@ -52,7 +52,7 @@ passerelle qui fait office de pare-feu. Les services réseaux \textabbrv{HTTP}, 
 \textabbrv{DHCP} et \textabbrv{SSH} sont installés sur des machines virtuelles.\\
 A partir du cahier des charges fourni, l'étudiant sera amené à réaliser
 différentes activités dont voici quelques exemples~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Plan d'adressage
 \item
@@ -75,7 +75,7 @@ différentes activités dont voici quelques exemples~:
 \ajoutESformes{De façon individuelle ou collective, sur des heures encadrées et non
 encadrées, l'étudiant ou l'équipe, sera confronté aux formes
 pédagogiques suivantes~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Création d'un réseau segmenté en \textabbrv{VLAN} avec mise en place d'une \textabbrv{DMZ} et
   de services réseaux\,;
@@ -91,7 +91,7 @@ pédagogiques suivantes~:
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Réseau entreprise~: opérationnel répondant aux problématiques
   suivantes~:
