--- a/latex/saes/SAE21_exemple3.tex
+++ b/latex/saes/SAE21_exemple3.tex
@@ -19,7 +19,7 @@ d'exploitation différents (GNU/Linux, Solaris, Aix, OpenBSD, NetBSD,
 FreeBSD, GNU/Hurd) et peuvent s'adapter à l'installation de matériel
 embarqué quand le bootloader (U-boot) est accessible. La mise en oeuvre
 comprend~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Démarrage réseau (\textabbrv{PXE}) pour charger un bootloader (\textabbrv{PXE} Linux)\,;
 \item
@@ -44,7 +44,7 @@ un serveur et un client.
 \ajoutESformes{De façon individuelle ou collective, sur des heures encadrées et non
 encadrées, l'étudiant ou l'équipe, sera confronté aux formes
 pédagogiques suivantes~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Mise en place un serveur \textabbrv{TFTP} et permettre aux machines. clientes de
   démarrer sur le réseau (\textabbrv{PXE})
@@ -61,7 +61,7 @@ pédagogiques suivantes~:
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Déploiement~: opérationnel et répondant aux problématiques suivantes~:
   \begin{itemize}
