--- a/latex/saes/SAE22_exemple1.tex
+++ b/latex/saes/SAE22_exemple1.tex
@@ -14,7 +14,7 @@ donc une fonction du maintien en condition opérationnelle de ces lignes.}
 \ajoutESdescription{
 La SAE porte sur l'analyse d'un signal \textabbrv{ADSL} dans le domaine spectral et
 pourra comporter jusqu'à 5 parties~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Affichage de la \textabbrv{FFT} d'un signal \textabbrv{ADSL} ou \textabbrv{ADSL}2+. On donnera par exemple
   le signal sous forme d'un fichier
