--- a/latex/saes/SAE22_exemple2.tex
+++ b/latex/saes/SAE22_exemple2.tex
@@ -19,7 +19,7 @@ Une fois les mesures effectuées, il devra être capable de les analyser
 et, par exemple, de produire une information de type cartographie de
 réception.\\
 Les exemples de signaux à étudier pourront être de type~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   signal WiFi\,;
 \item
@@ -32,7 +32,7 @@ Les exemples de signaux à étudier pourront être de type~:
 }
 
 \ajoutESformes{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Travaux pratiques, notamment pour les mesures\,;
 \item
@@ -45,7 +45,7 @@ Les exemples de signaux à étudier pourront être de type~:
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Rapport écrit\,;
 \item
