--- a/latex/saes/SAE22_exemple3.tex
+++ b/latex/saes/SAE22_exemple3.tex
@@ -23,7 +23,7 @@ leurs réglages.\\
 Une fois les mesures effectuées, il devra être capable de les analyser
 et, par exemple, de produire une information de type cartographique.\\
 Les exemples de numérisation à comparer pourront être de type~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   audio en téléphonie\,;
 \item
@@ -34,7 +34,7 @@ Les exemples de numérisation à comparer pourront être de type~:
 }
 
 \ajoutESformes{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Travaux pratiques, notamment pour les mesures\,;
 \item
@@ -47,7 +47,7 @@ Les exemples de numérisation à comparer pourront être de type~:
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Rapport écrit\,;
 \item
