--- a/latex/saes/SAE23.tex
+++ b/latex/saes/SAE23.tex
@@ -61,7 +61,7 @@ informatique pour le compte de son entreprise.}
 % Livrable
 \ajoutSlivrables{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Codes informatiques du site Web fonctionnel et dynamique
 \item
