--- a/latex/saes/SAE23_exemple1.tex
+++ b/latex/saes/SAE23_exemple1.tex
@@ -28,7 +28,7 @@ traitement.\\
 La SAÉ pourra être réalisée par un groupe de 2 étudiants.\\
 Partant d'un cahier des charges fourni, et pour un binôme d'étudiants,
 la SAé pourra être mise en oeuvre avec différentes étapes~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Phase 1~: mise en place de l'environnement de développement~:
   \begin{itemize}
@@ -61,7 +61,7 @@ la SAé pourra être mise en oeuvre avec différentes étapes~:
 Le travail demandé pourra inclure a minima un livrable en anglais
 (commentaires des codes, vidéo, présentation ou documentation).\\
 Les transformations attendues chez l'étudiant sont~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Apprendre en autonomie
 \item
@@ -78,7 +78,7 @@ Les transformations attendues chez l'étudiant sont~:
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Site fonctionnel et dynamique
 \item
