--- a/latex/saes/SAE23_exemple2.tex
+++ b/latex/saes/SAE23_exemple2.tex
@@ -17,7 +17,7 @@ les utilisateurs à son utilisation.}
 \ajoutESdescription{
 Cette SAÉ propose à l'étudiant de s'initier au développement d'une telle
 application Web. Partant des besoins utilisateurs, l'étudiant devra~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   mettre en place de son environnement de travail
 \item
@@ -32,7 +32,7 @@ application Web. Partant des besoins utilisateurs, l'étudiant devra~:
 La SAÉ pourra être réalisée par un groupe de 2 étudiants.\\
 Partant d'un cahier des charges fourni, et pour un binôme d'étudiants,
 la SAé pourra être mise en oeuvre avec différentes étapes~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Phase 1~: mise en place de l'environnement de développement~:
   \begin{itemize}
@@ -70,7 +70,7 @@ la SAé pourra être mise en oeuvre avec différentes étapes~:
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Site fonctionnel et dynamique
 \item
