--- a/latex/saes/SAE24.tex
+++ b/latex/saes/SAE24.tex
@@ -75,7 +75,7 @@
 % Livrable
 \ajoutSlivrables{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Dossier ou rapport d'étude
 \item
