--- a/latex/saes/SAE24_exemple2.tex
+++ b/latex/saes/SAE24_exemple2.tex
@@ -8,7 +8,7 @@
 du numérique. Il est contacté par une entreprise qui lui passe une
 commande~: refaire une partie du système et réseau.\\
 Sa mission consiste à~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Déployer le réseau d'une petite entreprise\,;
 \item
@@ -35,7 +35,7 @@ internationale.
 \ajoutESformes{De façon individuelle ou collective, sur des heures encadrées et non
 encadrées, l'étudiant ou l'équipe, sera confronté aux formes
 pédagogiques suivantes~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Création d'un réseau et l'administration du système de manière
   physique et/ou virtuelle\,;
@@ -57,7 +57,7 @@ pédagogiques suivantes~:
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Réseau entreprise opérationnel~: un utilisateur lambda peut-il se
   connecter et accéder aux applications
