--- a/latex/saes/SAE24_exemple3.tex
+++ b/latex/saes/SAE24_exemple3.tex
@@ -33,7 +33,7 @@ l'hygiène informatique en contexte professionnel.
 }
 
 \ajoutESformes{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Sur des heures encadrées~: TP de R201, R202, R203, R204, R207, R208,
   R209
@@ -52,7 +52,7 @@ l'hygiène informatique en contexte professionnel.
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Une maquette autonome, réelle ou virtuelle, d'un réseau de \textabbrv{PME},
   intégrant des vulnérabilités et des
