--- a/latex/ressources/R102.tex
+++ b/latex/ressources/R102.tex
@@ -47,7 +47,7 @@ les notions de services rendus et de performance du réseau.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Approche en couches et encapsulation.
 \item
