--- a/latex/ressources/R103.tex
+++ b/latex/ressources/R103.tex
@@ -58,7 +58,7 @@ découverte du poste client et de son environnement logiciel.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Câblage réseaux.
 \item
