--- a/latex/ressources/R202.tex
+++ b/latex/ressources/R202.tex
@@ -50,7 +50,7 @@ découverte du poste client et de son environnement logiciel.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Gestion des systèmes de fichiers (volumes, droits, types de fichiers)
 \item
