--- a/latex/ressources/R203.tex
+++ b/latex/ressources/R203.tex
@@ -52,7 +52,7 @@ pourront servir de support).}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Rappels sur les protocoles de transport (\textabbrv{TCP}, \textabbrv{UDP})
 \item
