--- a/latex/ressources/R210.tex
+++ b/latex/ressources/R210.tex
@@ -47,7 +47,7 @@ de compréhension dans un contexte professionnel technique.}
 % Contenus
 \ajoutRcontenudetaille{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Savoir structurer son discours oral et écrit (courriel, conversation
   téléphonique, visioconférence,
