--- a/latex/saes/SAE13.tex
+++ b/latex/saes/SAE13.tex
@@ -46,7 +46,7 @@ un collaborateur.}
 % Livrable
 \ajoutSlivrables{
 L'évaluation s'appuiera sur tout ou partie des éléments suivants~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   dossier ou rapport d'étude (compte rendu)\,;
 \item
