--- a/latex/saes/SAE14_exemple1.tex
+++ b/latex/saes/SAE14_exemple1.tex
@@ -17,7 +17,7 @@ L'étudiant développera ses premières pages personnelles sous la forme
 d'un site Web statique afin de construire son identité numérique
 professionnelle.\\
 Le contenu du site pourra par exemple~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   être un curriculum vitae numérique\,;
 \item
@@ -47,7 +47,7 @@ Le travail pourra être intégré au portfolio de l'étudiant.
 
 
 \ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Mise en ligne de leur présentation numérique\,;
 \item
