--- a/latex/saes/SAE22.tex
+++ b/latex/saes/SAE22.tex
@@ -46,7 +46,7 @@ présenter sous forme d'un bilan à un client ou un collaborateur.}
 % Livrable
 \ajoutSlivrables{
 \vspace{-5pt}
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Rapport écrit\,;
 \item
