--- a/latex/saes/SAE24_exemple1.tex
+++ b/latex/saes/SAE24_exemple1.tex
@@ -24,7 +24,7 @@ concepts fondamentaux des systèmes d'exploitation, des protocoles
 réseaux et des outils logiciel réseau de base et exprimera les résultats
 à l'aide des termes professionnels du domaine réseaux-informatiques.\\
 L'étudiant devra mobiliser toutes les ressources vues jusqu'à présent~:
-\begin{itemize}
+\begin{itemize}[topsep=5pt]
 \item
   Cours réseaux, informatique, télécommunications\,;
 \item
