Modif des fiches latex

--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -40,7 +40,7 @@
 \usepackage[base]{babel}
 \usepackage{polyglossia}
 \setdefaultlanguage{french}
-
+\usepackage{csquotes}
 \setlist{leftmargin=1em,topsep=0pt,partopsep=0pt,itemsep=0pt,itemindent=0em}
 
 %\geometry{a4paper,left=25mm,right=25mm,top=25 mm,bottom=25mm} % landscape
