--- a/latex/ressources/R102.tex
+++ b/latex/ressources/R102.tex
@@ -38,9 +38,9 @@
 et intégratif de l'ensemble des mécanismes nécessaires au fonctionnement
 des réseaux informatiques. Ce cadre général est essentiel, et sert de
 référence à l'ensemble des autres ressources réseaux.\\
-Elle participe principalement à la compétence RT1 \og Administrer les
-réseaux et l'Internet\fg{} à travers la compréhension et l'utilisation
-de la partie réseau des systèmes d'exploitation, la compréhension de
+Elle participe principalement à la compétence RT1 «Administrer les
+réseaux et l'Internet» à travers la compréhension et l'utilisation de la
+partie réseau des systèmes d'exploitation, la compréhension de
 l'interopérabilité des systèmes via les protocoles réseaux, ainsi que
 les notions de services rendus et de performance du réseau.}
 
