--- a/latex/ressources/R103.tex
+++ b/latex/ressources/R103.tex
@@ -35,11 +35,11 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoirs-faire pour
-les compétences de cœur de métier \og Administrer les réseaux et
-l'Internet\fg{} (RT1). Elle vise à fournir à l'étudiant les
-connaissances et les compétences indispensables pour pouvoir concevoir,
-déployer et maintenir l'infrastructure réseau informatique de
-l'entreprise (Ethernet).\\
+les compétences de cœur de métier «Administrer les réseaux et
+l'Internet» (RT1). Elle vise à fournir à l'étudiant les connaissances et
+les compétences indispensables pour pouvoir concevoir, déployer et
+maintenir l'infrastructure réseau informatique de l'entreprise
+(Ethernet).\\
 La compétence RT1 est renforcée à travers la mise en place et la
 configuration de matériels actifs comme des commutateurs, la gestion de
 la sûreté de fonctionnement du réseau local Ethernet (spanning tree) et
@@ -49,11 +49,11 @@ compétences s'appuient sur la compréhension des mécanismes intrinsèques
 aux réseaux locaux Ethernet~: adressage \textabbrv{MAC}, commutation/routage de
 niveau 2, \textabbrv{ARP}, passage d'un type de support physique à un autre,
 changements de débit.\\
-Pour la compétence \og Connecter les entreprises et les usagers\fg{}
-(RT2), elle aborde les notions d'exploitation du câblage (brassage).\\
-Elle contribue aussi à la compétence \og Créer des outils et
-applications informatiques pour les R\&T\fg{} (RT3) à travers la
-découverte du poste client et de son environnement logiciel.}
+Pour la compétence «Connecter les entreprises et les usagers» (RT2),
+elle aborde les notions d'exploitation du câblage (brassage).\\
+Elle contribue aussi à la compétence «Créer des outils et applications
+informatiques pour les R\&T» (RT3) à travers la découverte du poste
+client et de son environnement logiciel.}
 
 % Contenus
 \ajoutRcontenudetaille{
