--- a/latex/ressources/R104.tex
+++ b/latex/ressources/R104.tex
@@ -32,9 +32,8 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
-les compétences de cœur de métier \og Administrer les réseaux et
-l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
-usagers\fg{} (RT2).\\
+les compétences de cœur de métier «Administrer les réseaux et
+l'Internet» (RT1) et «Connecter les entreprises et les usagers» (RT2).\\
 La connaissance des phénomènes électriques, la maîtrise des grandeurs
 électriques et de leurs mesures, ainsi que la notion de puissance
 permettent à l'étudiant de comprendre le fonctionnement des systèmes
