--- a/latex/ressources/R105.tex
+++ b/latex/ressources/R105.tex
@@ -33,10 +33,9 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte les bases de connaissances et savoir-faire
-techniques pour la compétence \og connecter les entreprises et les
-usagers\fg{} à travers les apprentissages critiques \og mesurer et
-analyser les signaux\fg{} et \og déployer des supports de
-transmission\fg{}.\\
+techniques pour la compétence «connecter les entreprises et les usagers»
+à travers les apprentissages critiques «mesurer et analyser les signaux»
+et «déployer des supports de transmission».\\
 Il s'agit d'étudier les concepts fondamentaux des supports de
 transmission.}
 
