--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -41,11 +41,10 @@ informatique, en réseau, en télécommunication, \ldots) que le
 professionnel R\&T doit développer et s'inscrivent dans de nombreuses
 situations professionnelles que rencontre le professionnel R\&T. Cette
 ressource est nécessaire pour apprendre à développer des outils
-informatiques à usage interne d'une équipe~: compétence \og Créer des
-outils et applications informatiques pour les R\&T\fg{} (RT3) et pour
+informatiques à usage interne d'une équipe~: compétence «Créer des outils
+et applications informatiques pour les R\&T» (RT3) et pour
 l'automatisation du déploiement et de la maintenance des outils
-logiciels~: compétence \og Administrer les réseaux et l'Internet\fg{}
-(RT1).}
+logiciels~: compétence «Administrer les réseaux et l'Internet» (RT1).}
 
 % Contenus
 \ajoutRcontenudetaille{
