--- a/latex/ressources/R110.tex
+++ b/latex/ressources/R110.tex
@@ -36,13 +36,13 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances langagières pour les
-compétences de cœur de métier \og Administrer les réseaux et
-l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
-usagers\fg{} (RT2). Elle contribue aussi à la compétence \og Créer des
-outils et applications informatiques pour les R\&T\fg{} (RT3) à travers
-des mises en situations, jeux de rôle, dialogues qui permettent la prise
-de parole en continu et en interaction, en développant les compétences
-de compréhension dans un contexte professionnel technique.}
+compétences de cœur de métier «Administrer les réseaux et l'Internet»
+(RT1) et «Connecter les entreprises et les usagers» (RT2). Elle
+contribue aussi à la compétence «Créer des outils et applications
+informatiques pour les R\&T» (RT3) à travers des mises en situations,
+jeux de rôle, dialogues qui permettent la prise de parole en continu et
+en interaction, en développant les compétences de compréhension dans un
+contexte professionnel technique.}
 
 % Contenus
 \ajoutRcontenudetaille{
