--- a/latex/saes/SAE11.tex
+++ b/latex/saes/SAE11.tex
@@ -47,8 +47,8 @@ usage des moyens informatiques.}
 % Livrable
 \ajoutSlivrables{
 Rapport d'analyse des risques numériques et présentation diaporama ou
-conception d'une courte vidéo de sensibilisation (par ex: \og en 180
-secondes\fg{}) destinée à vulgariser les premiers pas en cybersécurité.\\
+conception d'une courte vidéo de sensibilisation (par ex: «en 180
+secondes») destinée à vulgariser les premiers pas en cybersécurité.\\
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
 synthétise sa production technique et son analyse argumentée.
 }
