--- a/latex/saes/SAE11_exemple3.tex
+++ b/latex/saes/SAE11_exemple3.tex
@@ -65,9 +65,8 @@ On pourra également utiliser les supports~:
 
 \ajoutESmodalite{Chaque étudiant ou groupe d'étudiants doit produire un rapport sous
 forme de catalogue de vulnérabilités que l'on pourrait destiner à une
-campagne de sensibilisation pour \og grand public\fg{}. Le format de
-\og 1 vulnérabilité, 1 ou 2 pages\fg{} doit être le format à viser pour
-imposer une description synthétique et éviter les copier/coller
-compulsifs avec détails techniques superflus. Les exemples d'attaques
-présentés doivent être réalistes et compréhensibles par des non
-spécialistes.}
+campagne de sensibilisation pour «grand public». Le format de «1
+vulnérabilité, 1 ou 2 pages» doit être le format à viser pour imposer
+une description synthétique et éviter les copier/coller compulsifs avec
+détails techniques superflus. Les exemples d'attaques présentés doivent
+être réalistes et compréhensibles par des non spécialistes.}
