--- a/latex/saes/SAE12_exemple3.tex
+++ b/latex/saes/SAE12_exemple3.tex
@@ -6,13 +6,13 @@
 
 \ajoutESproblematique{Le but est d'amener les étudiants à construire eux-mêmes un réseau
 simplifié d'équipements actifs filaires interconnectés, sur la base d'un
-cahier des charges général type \og  schéma de dépannage \fg{}.}
+cahier des charges général type « schéma de dépannage ».}
 
 \ajoutESdescription{
 Cette SAÉ nécessite un travail en amont de recensement des
 fonctionnalités nécessaires et d'un recensement de matériel choisi sur
-la base d'un recueil de fiches produit professionnelles (\og  datasheet
-\fg{} en anglais) ou à défaut une sitographie commerçante anglophone.\\
+la base d'un recueil de fiches produit professionnelles (« datasheet »
+en anglais) ou à défaut une sitographie commerçante anglophone.\\
 Suite à ce choix, les étudiants produisent eux-mêmes au moins un des
 câbles nécessaires à cette installation. Ils utiliseront les équipements
 déjà en place dans l'établissement en remplacement de ceux qui auront
