--- a/latex/saes/SAE22_exemple2.tex
+++ b/latex/saes/SAE22_exemple2.tex
@@ -44,10 +44,4 @@ Les exemples de signaux à étudier pourront être de type~:
 
 
 
-\ajoutESmodalite{\vspace{-5pt}
-\begin{itemize}[topsep=5pt]
-\item
-  Rapport écrit\,;
-\item
-  Présentation orale des performances mesurées et de leur analyse.
-\end{itemize}}
+\ajoutESmodalite{}
