--- a/latex/saes/SAE24_exemple1.tex
+++ b/latex/saes/SAE24_exemple1.tex
@@ -4,9 +4,9 @@
 
 \nouvelexemple{Découvrir mon réseau informatique domestique}
 
-\ajoutESproblematique{Le réseau informatique domestique est une \og  petite \fg{} instance
-d'un réseau d'entreprise (par exemple, box, points d'accès WiFi, réseaux
-du CROUS, modem, \textabbrv{4G}, ordinateurs, téléphonie, objets connectés).\\
+\ajoutESproblematique{Le réseau informatique domestique est une « petite » instance d'un
+réseau d'entreprise (par exemple, box, points d'accès WiFi, réseaux du
+CROUS, modem, \textabbrv{4G}, ordinateurs, téléphonie, objets connectés).\\
 Dans cette SAÉ, l'étudiant devra comprendre l'agencement des briques
 télécoms (accès au réseau), des équipements (routeur, switch, firewall,
 WiFi), des terminaux (\textabbrv{PC}, smartphone, \ldots) et des protocoles (IP,
