--- a/latex/ressources/R205.tex
+++ b/latex/ressources/R205.tex
@@ -35,9 +35,8 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
-les compétences de cœur de métier \og Administrer les réseaux et
-l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
-usagers\fg{} (RT2)\\
+les compétences de cœur de métier «Administrer les réseaux et
+l'Internet» (RT1) et «Connecter les entreprises et les usagers» (RT2)\\
 La caractérisation du comportement d'un système télécom en fonction de
 la fréquence permet au technicien d'appréhender la notion de bande
 passante et d'introduire celle de canal de transmission.\\
