--- a/latex/ressources/R206.tex
+++ b/latex/ressources/R206.tex
@@ -35,9 +35,8 @@
 
 % Le descriptif
 \ajoutRancrage{Cette ressource apporte le socle de connaissances et savoir-faire pour
-les compétences de cœur de métier \og Administrer les réseaux et
-l'Internet\fg{} (RT1) et \og Connecter les entreprises et les
-usagers\fg{} (RT2).\\
+les compétences de cœur de métier «Administrer les réseaux et
+l'Internet» (RT1) et «Connecter les entreprises et les usagers» (RT2).\\
 Les systèmes de Réseaux et Télécoms véhiculent en permanence de données
 numérisées. Ce module vient donc présenter les principes de la
 numérisation de l'information, les contraintes de cette numérisation et
