--- a/latex/ressources/R209.tex
+++ b/latex/ressources/R209.tex
@@ -44,8 +44,8 @@
 \ajoutRancrage{Le professionnel R\&T peut être amené à développer, pour ses besoins
 personnels ou pour ses collaborateurs, un site Web, par exemple pour
 fournir une interface de présentation du réseau informatique~:
-compétence \og Créer des outils et applications informatiques pour les
-R\&T\fg{} (RT3).\\
+compétence «Créer des outils et applications informatiques pour les
+R\&T» (RT3).\\
 Il doit en appréhender tous les éléments~: il doit aussi bien connaître
 les protocoles de communication du Web que veiller à la sécurité de
 ceux-ci. Il doit également pouvoir accéder, traiter et afficher des
